<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    tools:context=".activity.InformacoesActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Informarções de perfil"
        android:textColor="@color/branco"
        android:textSize="18sp" />

    <View
        android:id="@+id/view4"
        android:layout_width="235dp"
        android:layout_height="1dp"
        android:layout_gravity="left"
        android:layout_marginBottom="40dp"
        android:background="@color/cinza" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <EditText
            android:id="@+id/editPerfilNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"

            android:ems="10"
            android:hint="Nome"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textColor="@color/cinza"
            android:textColorHint="@color/cinzaClaro" />

        <EditText
            android:id="@+id/editPerfilNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="Ano de nascimento"
            android:inputType="numberDecimal"
            android:padding="20dp"
            android:textColor="@color/cinza"
            android:textColorHint="@color/cinzaClaro" />

        <EditText
            android:id="@+id/editPerfilpeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/peso"
            android:inputType="numberDecimal"
            android:padding="20dp"
            android:textColor="@color/cinza"
            android:textColorHint="@color/cinzaClaro" />

        <EditText
            android:id="@+id/editPerfilAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="Altura"
            android:inputType="numberDecimal"
            android:padding="20dp"
            android:textColor="@color/cinza"
            android:textColorHint="@color/cinzaClaro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:outlineAmbientShadowColor="@color/branco"
                android:outlineSpotShadowColor="@color/branco"
                android:shadowColor="@color/branco"
                android:textColor="@color/branco"
                android:textColorHighlight="@color/branco"
                android:textColorHint="@color/branco"
                android:textColorLink="@color/branco"
                android:textCursorDrawable="@color/branco" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonPerfilSAlvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/ic_seta_direita_24"
            android:onClick="salvarDadosPerfil"
            android:padding="10dp"
            android:text="@string/prosseguir"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:backgroundTint="@color/branco" />

    </LinearLayout>

</LinearLayout>
