<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/materialProgressBar"
            app:layout_constraintTop_toTopOf="@+id/materialProgressBar">

            <ProgressBar
                android:id="@+id/progressBar5"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:progress="100"
                android:progressDrawable="@drawable/circule_progressfundod"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBarKg"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:progress="100"
                android:progressDrawable="@drawable/circule_progresso"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/mudanca"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toEndOf="@+id/progressBar5"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBarPesoInicial245"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="125dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="1dp"
                android:layout_marginTop="4dp"
                android:max="100"
                android:progress="100"
                android:progressTint="@color/laranja"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/progressBarKg"
                app:layout_constraintTop_toBottomOf="@+id/textudancaHome" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/dias_restantes"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/progressBar5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBarPesoInicial3121"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="125dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="4dp"
                android:max="100"
                android:progress="100"
                android:progressTint="@color/laranja"
                app:layout_constraintEnd_toStartOf="@+id/progressBar5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDiasRestante" />

            <TextView
                android:id="@+id/textDiasRestante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/branco"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/progressBar5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textudancaHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textColor="@color/branco"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toEndOf="@+id/progressBar5"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textViewPesoqueFalta"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center"
                android:text="00.00"
                android:textColor="@color/branco"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar5"
                app:layout_constraintEnd_toEndOf="@+id/progressBar5"
                app:layout_constraintStart_toStartOf="@+id/progressBar5"
                app:layout_constraintTop_toTopOf="@+id/progressBar5"
                app:layout_constraintVertical_bias="0.534" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/peso_inicial"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/peso_atual"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/meta"
                android:textColor="@color/branco"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPesoInicialHome"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="00.00"
                android:textColor="@color/branco"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewPesoAtual"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="00.00"
                android:textColor="@color/branco"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewMeta"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="00.00"
                android:textColor="@color/branco"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBarPesoInicial"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:max="100"
                android:progress="100"
                android:progressTint="@color/laranja" />

            <ProgressBar
                android:id="@+id/progressBarPesoAtual"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:max="100"
                android:progress="100"
                android:progressTint="@color/laranja" />

            <ProgressBar
                android:id="@+id/progressBar9"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="130dp"
                android:layout_height="wrap_content"

                android:max="100"
                android:progress="99"
                android:progressTint="@color/laranja" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/branco"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/bg_meta"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:onClick="progresso"
                        app:srcCompat="@drawable/progresso1" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/progresso" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_meta"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:onClick="meta"
                        app:srcCompat="@drawable/meta1" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/meta" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/bg_meta"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/buttonSalvarDadosMeta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:onClick="historico"
                        app:srcCompat="@drawable/historico1" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/historico" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/bg_meta"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="premium"
                    app:srcCompat="@drawable/medalha" />

                <TextView
                    android:id="@+id/textView115"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/premium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_meta"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="compartilhar"
                    app:srcCompat="@drawable/appsobre" />

                <TextView
                    android:id="@+id/textView125"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/compartilhar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/bg_meta"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="perfil"
                    app:srcCompat="@drawable/perfilhome" />

                <TextView
                    android:id="@+id/textView134"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/perfil" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16publi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Publicidade" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>